--- a/admin/templates/vote_list.htm
+++ b/admin/templates/vote_list.htm
@@ -13,19 +13,25 @@
 
 <table cellpadding="3" cellspacing="1">
   <tr>
+      <th align="center" width="30">编号</th>
     <th>{$lang.vote_name}</th>
-    <th>{$lang.begin_date}</th>
-    <th>{$lang.end_date}</th>
+      <th align="center">主题标识</th>
+      <th align="center">主题排序</th>
+    <th align="center">{$lang.begin_date}</th>
+    <th align="center">{$lang.end_date}</th>
     <th>{$lang.vote_count}</th>
     <th>{$lang.handler}</th>
   </tr>
   {foreach from=$list item=list}
   <tr>
+      <td align="center"><span>{$list.vote_id}</span></td>
     <td class="first-cell">
     <span onclick="javascript:listTable.edit(this, 'edit_vote_name', {$list.vote_id})">{$list.vote_name|escape:html}</span>
     </td>
+      <td><span onclick="javascript:listTable.edit(this, 'edit_vote_mark', {$list.vote_id})">{$list.vote_mark}</span></td>
+      <td><span onclick="javascript:listTable.edit(this, 'edit_vote_sort', {$list.vote_id})">{$list.vote_sort}</span></td>
     <td align="center"><span>{$list.begin_date}</span></td>
-    <td align="center"><span>{$list.end_date}</span></td>
+    <td ><span>{$list.end_date}</span></td>
     <td align="right"><span>{$list.vote_count}</span></td>
     <td align="center">
     <a href="vote.php?act=option&id={$list.vote_id}" title="{$lang.vote_option}"><img src="images/icon_view.gif" border="0" height="16" width="16" /></a>&nbsp;
