--- a/ohmylike/templates/top.htm
+++ b/ohmylike/templates/top.htm
@@ -192,7 +192,7 @@ var adminId = "{$admin_id}";
 </head>
 <body>
 <div id="header-div">
-  <div id="logo-div" style="bgcolor:#000000;">易张脸管理平台</div>
+  <div id="logo-div" style="bgcolor:#000000;">脸妆网管理平台</div>
   <div id="license-div" style="bgcolor:#000000;"></div>
   <div id="submenu-div">
     <ul>
